@@ -41,6 +41,11 @@ heplot(mod.OBK, hypotheses=c("treatment1", "treatment2"),
 	main="Between-S effects: Treat*Gender"
 	)
 pairs(mod.OBK, col=c("red", "black", "blue", "brown"))
+
+heplot3d(mod.OBK, hypotheses=c("treatment1", "treatment2"),
+  col=c("pink", "black", "blue", "green3", "gray40", "gray40"),
+  hyp.labels=c("(A,B)-Control", "A-B")
+
 	
 # HE plots for Within-S effects
 	heplot(mod.OBK, idata=idata, idesign=~session, iterm="session",
