@@ -74,5 +74,7 @@ Version 0.9.0 (2009-12-25)
  o imatrix= argument  for doubly-multivariate designs implemented, but depends on car 2.0+
  o Updated example(OBK) 
  o Updated example(WeightLoss)
+ o Implemented 3D HE plots in heplot3d.mlm for repeated measures designs (untested)
+ 
  
 
